--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,21 @@
 <h2>Hello World</h2>
 <p>
 	The time is now: <%= Time.now %>
+	<br>
+	
+	<%= @x.count %>
+	<table>
+		<thead>
+			<th>Program</th>
+			<th>Amount</th>
+			<th>Percentage</th>
+		</thead>
+		<% @x.each do |y| %>
+			<tr>
+				<td><%= y[:program] %></td>
+				<td><%= number_to_currency(y[:amount]) %></td>
+				<td><%= number_to_percentage( y[:amount] / @total *100)%></td>
+			</tr>
+		<% end %>	
+	</table>
 </p>
